<resources>
    <string name="app_name">Footprint_v2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="nationality">Nationality</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>
