<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sign_in"
            android:id="@+id/signinTextView"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_columnSpan="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/username"
            android:id="@+id/usernameTextView"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameEditText"
            android:layout_row="1"
            android:layout_column="1"
            android:maxLines="1"
            android:minWidth="250dp"
            android:minLines="1"
            android:singleLine="true"
            android:width="200dp"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:id="@+id/passwordTextView"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_row="2"
            android:layout_column="1"
            android:maxLines="1"
            android:minWidth="250dp"
            android:minLines="1"
            android:singleLine="true"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/forgot_password"
            android:id="@+id/forgotPasswordTextView"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center"
            android:enabled="true"
            android:clickable="true"
            android:onClick="forgotPasswordClicked"
            android:layout_columnSpan="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:layout_row="6"
            android:layout_column="0"
            android:width="30dp"
            android:onClick="loginButtonClicked"
            android:minWidth="100dp"
            android:minHeight="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_columnSpan="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/signUpButton"
            android:layout_row="7"
            android:layout_column="1"
            android:onClick="signUpButtonClicked"
            android:layout_gravity="center_horizontal" />

   </LinearLayout>

</RelativeLayout>
